--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+body {
+    margin: 0;
+    box-sizing: border-box;
+    background: url(./images/17973908.jpg);
+    background-size: cover;
+}
+
+table {
+    text-transform: capitalize;
+    border-radius: 10px;
+    margin: 50px auto;
+    width: 100%;
+    color: rgba(0, 0, 0, 0.644);
+
+    background-color: white;
+}
+th {
+    color: white;
+    background-color: #6e7bd9;
+}
+td,
+th {
+    padding: 10px 90px;
+}
+thead tr th:last-child {
+    padding-left: 100px;
+}
+.content {
+    width: 90%;
+}
+
+h3 {
+    color: red;
+    margin-left: 420px;
+}
