--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,20 @@ h3 {
     color: red;
     margin-left: 420px;
 }
+
+.dash {
+    position: absolute;
+    top: 10px;
+    right: 0;
+}
+.dash button {
+    display: block;
+    background-color: blue;
+    color: white;
+    border: none;
+    text-transform: capitalize;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-left: auto;
+    margin-right: 20px;
+}
